Reading special floating point values in FITS ASCII tables
Until now, we would rely on CFITSIO to interpret the numerical values of
FITS ASCII tables (as we do for the binary tables). However, there was a
problem regarding special values like `INF' and `-INF'. In FITS ASCII
tables, CFITSIO can't interpret these values (that it writes itself).

To fix the problem, `fits_tab_read_ascii_float_special' was added. This
function will read the column contents as strings, then it will parse them
as floating point numbers with the robust `strtod' implementation of the
GNU C Library (which is shipped with Gnuastro for internal usage).

Also, the example code in `gal_fits_key_read_from_ptr' was corrected for a
few mistakes.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -22801,8 +22801,8 @@ Here is one example of using this function:
 /* Allocate an array of datasets. */
 gal_data_t *keysll=gal_data_array_calloc(N);
 
-/* Use the array as a list.*/
-for(i=0;i<N-2;++i) keysll[i].next=keysll[i+1];
+/* Make the array usable as a list too (by setting `next'). */
+for(i=0;i<N-1;++i) keysll[i].next=keysll[i+1];
 
 /* Fill the datasets with a `name' and a `type'. */
 keysll[0].name="NAME1";     keysll[0].type=GAL_TYPE_INT32;
@@ -22815,7 +22815,10 @@ gal_fits_key_read_from_ptr(fptr, keysll, 0, 0);
 
 /* Use the values as you like... */
 
-/* Free all the allocated spaces. */
+/* Free all the allocated spaces. Note that `name' wasn't allocated
+   in this example, so we should explicitly set it to NULL before
+   calling `gal_data_array_free'. */
+for(i=0;i<N;++i) keysll[i].name=NULL;
 gal_data_array_free(keysll, N, 1);
 @end example
 
