New --ignoreblankinsky for NoiseChisel and Statistics
Until now, NoiseChisel and Statistics would set all the pixels that are
blank in the input to blank in the Sky and Sky standard deviation images
also. This was good for visual inspection when the field isn't aligned with
the rectangular image.

But in some situations (for example when you have intentionally set some
pixels to blank temporarily), you actually want the Sky and its standard
deviation under the blank pixels also. With this new `--ignoreblankinsky'
option, both NoiseChisel and Statistics will ignore the input's blank
values when writing the output with the same size as the input
(`--oneelempertile' wasn't called).

--- a/NEWS
+++ b/NEWS
@@ -55,6 +55,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   NoiseChisel:
     --rawoutput: only output the detection labels and Sky and its STD.
+    --ignoreblankinsky: don't set the pixels that are blank in the input to
+      blank in the Sky and Sky standard deviation outputs (when
+      `--oneelempertile' is not called).
     --label: label the connected detections. Until now this was the default
       behavior. However, from this release, NoiseChisel is only in charge
       of detection. Segmentation is done by a new program (Segment). Since
@@ -65,6 +68,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   Statistics:
     --manualbinrange: histogram or CFP range can be outside of distribution.
+    --ignoreblankinsky: similar to same option in NoiseChisel.
 
   Libraries:
     gal_array_read: read array from any of known formats (FITS,TIFF,JPEG,...).
